--- a/Client/package.json
+++ b/Client/package.json
@@ -17,13 +17,15 @@
     "@mui/x-date-pickers-pro": "^6.19.8",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
+    "firebase": "^10.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-browser-router": "^2.1.2",
     "react-datepicker": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
