--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.14",
     "@mui/x-date-pickers": "^6.19.8",
     "@mui/x-date-pickers-pro": "^6.19.8",
+    "@react-google-maps/api": "^2.19.3",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
     "firebase": "^10.10.0",
