--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@mui/material": "^5.15.14",
     "@mui/x-date-pickers": "^6.19.8",
     "@mui/x-date-pickers-pro": "^6.19.8",
