--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
     "firebase": "^10.10.0",
+    "mapbox-gl": "^3.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-browser-router": "^2.1.2",
