--- a/Client/package.json
+++ b/Client/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "serve dist -s -n -L -p $PORT",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -28,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "serve": "^14.2.1",
     "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
